# wanderer

./: .gitignore  CMakeLists.txt  README.md  auto.sh  build.sh  docker-compose.yml  docker-entrypoint.sh  main.cpp
.github/workflows/: dev.yml  main.yml
build-run/docker-build/: Dockerfile  entrypoint.sh  sources.list
build-run/run/common/conf/: all.yml  privatekey.pem
build-run/run/common/service/: wanderer-center.service
build-run/run/db/: Dockerfile
build-run/run/db/conf/: database.yml
client-test/: addressbook_pb2.py  client.py  client_test.py  server.py  test_pb2.py  wanderer_pb2.py
cmake/: arrange.sdk.include.cmake  linux_android.cmake  linux_clang.cmake  mingw64_windows.cmake
doc/: README.md  develop.drawio  develop.md
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docker/docker-build/: Dockerfile  docker-compose.yml  entrypoint.sh  sources.list
docker/run/: auto.sh
docker/run/common/conf/: all.yml  center.yml  gateway.yml  login.yml  publickey.pem
docker/run/common/service/: wanderer-gate.service  wanderer-login.service
docker/run/db/: Dockerfile  docker-compose.yml  entrypoint.sh
include/base/: app.h  app_config.h  module.h  reflector.h
include/logic/: inner_session.h  logic_module.h  socket_inner_base.h  socket_inner_linux.h
include/message_handler/: s2g_register_inner_session_handler.h
include/network/: message.h  message_dispatcher.h  message_hander.h  message_hander_base.h  message_packer.h  network_module.h  protobuf_message_packer.h  session.h  socket_base.h  socket_epoll.h
include/socket/: socket_epoll.h
log/: 2021_3_29_log.txt
lua-libs/: json_rpc.lua
lua-src/: actor_database.lua  actor_gateway.lua  actor_login.lua  main.lua
lua-src/base/: app_config.lua  w.lua
lua-src/database/: db.lua
protocol/: CMakeLists.txt  addressbook.pb.h  test.pb.cc  test.pb.h  wanderer.pb.cc  wanderer.pb.h
protocol/proto/: test.proto  wanderer.proto
sdk/: CMakeLists.txt  export.cpp  export.h
sdk/network/: network.cpp  network.h  session.cpp  session.h  socket_base.cpp  socket_base.h  socket_unix.cpp  socket_unix.h
src/: CMakeLists.txt
src/actor/: actor.cpp  actor.h  actor_auth.cpp  actor_auth.h  actor_inner.cpp  actor_inner.h  actor_module.cpp  actor_module.h
src/base/: app.cpp  app.h  app_config.cpp  app_config.h  module.cpp  module.h  object.h  reflector.cpp  reflector.h  system.cpp  system.h
src/center/: actor_auth.cpp  actor_auth.h  actor_center.cpp  actor_center.h  center_module.cpp  center_module.h
src/custom_module/: custom_module.cmake  custom_module.cpp  custom_module.h
src/custom_module/WebServer/: WebServer.cpp  WebServer.h
src/custom_module/WebServer/mongoose/: mongoose.h
src/database/: actor_database.cpp  actor_database.h  database_module.cpp  database_module.h
src/gate/: gate_module.cpp  gate_module.h
src/gateway/: gateway_module.cpp  gateway_module.h
src/inner_session/: inner_session_module.cpp  inner_session_module.h
src/libraries/: CMakeLists.txt
src/libraries/lzma/: LzFindMt.h  LzmaEnc.c
src/libraries/openssl-cmake/: .gitignore  CMakeLists.txt
src/libraries/openssl-cmake/cmake/: PrebuiltOpenSSL.cmake
src/libraries/openssl-include/openssl/: opensslconf.h
src/logic/: inner_session.cpp  logic_module.cpp  logic_module.h  socket_inner_base.cpp  socket_inner_linux.cpp
src/login/: actor_login.cpp  actor_login.h  login_module.cpp  login_module.h
src/message_handler/: s2g_register_inner_session_handler.cpp  s2g_register_inner_session_handler.h  test_message_handler.cpp  test_message_handler.h
src/module/: CMakeLists.txt  custom_module.cmake  custom_module.cpp  custom_module.h
src/module/ExplainC/: CMakeLists.txt  ExplainC.cpp  ExplainC.h
src/module/LuaScript/: CMakeLists.txt  LuaScript.cpp  LuaScript.h  actor_lua.cpp  actor_lua.h
src/module/LuaScript/lua/: README  lapi.c  lauxlib.c  lcode.c  ldo.c  lfunc.c  lgc.c  llex.c  llimits.h  lobject.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  ltable.c  lua.c  lvm.c
src/module/WebServer/: CMakeLists.txt  WebServer.cpp  WebServer.h
src/module/WebServer/mongoose/: mongoose.c  mongoose.h
src/network/: ProtobufMessagePacker.cpp  circle_buffer.cpp  circle_buffer.h  message.cpp  message.h  message_dispatcher.cpp  message_hander.cpp  message_hander.h  message_hander_base.cpp  message_hander_base.h  message_packer.cpp  message_packer.h  network_module.cpp  network_module.h  protobuf_message_packer.cpp  protobuf_message_packer.h  session.cpp  session.h  socket_base.cpp  socket_base.h  socket_epoll.cpp  socket_epoll.h  socket_iocp.cpp  socket_iocp.h
src/sdk/: CMakeLists.txt  export.cpp  export.h  network.cpp  network.h  socket_client_base.cpp  socket_client_base.h  socket_unix.cpp  socket_unix.h  socket_windows.cpp  socket_windows.h
src/socket/: socket_epoll.cpp
src/utility/: openssl_utility.cpp  openssl_utility.h  pool.cpp  pool.h  utility.cpp  utility.h
tools/: run.sh
tools/protoc-3.11.4-linux-x86_64/: test.sh
